bindings/c/bench/with_zmq/std_compat/zlink.h

typedef int zlink_socket_type_t;
typedef int zlink_option_t;
typedef int zlink_ctx_option_t;
typedef int zlink_pub_option_t;
typedef int zlink_config_result_t;
typedef int zlink_request_result_t;
typedef int zlink_send_flags_t;
typedef int zlink_recv_flags_t;
typedef uint64_t zlink_socket_monitor_event_mask_t;
typedef zmq_msg_t zlink_msg_t;
typedef enum zlink_part_flag_t
{
    ZLINK_PART_FINAL = 0,
    ZLINK_PART_MORE = 1
} zlink_part_flag_t;
enum
{
    ZLINK_CONFIG_OK = 0,
    ZLINK_CONFIG_INVALID_ARGUMENT = 702,
    ZLINK_SUBMIT_OK = 0,
    ZLINK_SUBMIT_BACKPRESSURED = 1,
    ZLINK_CLOSE_OK = 0,
    ZLINK_BIND_OK = 0,
    ZLINK_CONNECT_OK = 0,
    ZLINK_RECV_OK = 0,
    ZLINK_HANDLER_OK = 0,
    ZLINK_SEND_FLAGS_NONE = 0,
    ZLINK_SEND_FLAGS_DONTWAIT = 1,
    ZLINK_RECV_FLAGS_NONE = 0,
    ZLINK_RECV_FLAGS_DONTWAIT = 1
};
typedef SOCKET zlink_fd_t;
typedef int zlink_fd_t;
typedef struct zlink_pollitem_t
{
    void *socket;
    zlink_fd_t fd;
    short events;
    short revents;
} zlink_pollitem_t;
typedef struct zlink_routing_id_t
{
    uint8_t size;
    unsigned char data[256];
} zlink_routing_id_t;
typedef struct zlink_monitor_event_t
{
    uint64_t event;
    uint64_t value;
    zlink_routing_id_t routing_id;
    char local_addr[256];
    char remote_addr[256];
} zlink_monitor_event_t;
typedef zlink_monitor_event_t zlink_socket_monitor_event_t;
typedef void (*zlink_socket_monitor_handler_fn) (const zlink_monitor_event_t *event_,
                                                 void *userdata_);
typedef void (*zlink_send_ready_handler_fn) (void *subject_, void *userdata_);
typedef struct zlink_socket_monitor_open_options_t
{
    zlink_socket_monitor_event_mask_t events;
} zlink_socket_monitor_open_options_t;
typedef struct zlink_monitor_status_t
{
    uint32_t source_kind;
    uint32_t state_flags;
    uint32_t detail_flags;
    uint32_t ready_count;
    uint64_t snd_pending_msgs;
    uint64_t rcv_pending_msgs;
} zlink_monitor_status_t;
typedef struct zlink_poller_event_t
{
    void *socket;
    zlink_fd_t fd;
    void *user_data;
    short events;
} zlink_poller_event_t;
enum
{
    ZLINK_IO_THREADS = 1,
    ZLINK_MAX_SOCKETS = 2,
    ZLINK_CTX_OPT_BLOCKY = 10
};
enum
{
    ZLINK_SOCKET_DEALER = ZMQ_DEALER,
    ZLINK_SOCKET_ROUTER = ZMQ_ROUTER,
    ZLINK_SOCKET_PUB = ZMQ_PUB,
    ZLINK_SOCKET_SUB = ZMQ_SUB,
    ZLINK_SOCKET_STREAM = ZMQ_STREAM
};
#define ZLINK_SOCKET_STREAM ZMQ_STREAM
enum
{
    ZLINK_OPT_LINGER = ZMQ_LINGER,
    ZLINK_OPT_SNDHWM = ZMQ_SNDHWM,
    ZLINK_OPT_RCVHWM = ZMQ_RCVHWM,
    ZLINK_OPT_SNDTIMEO = ZMQ_SNDTIMEO,
    ZLINK_OPT_RCVTIMEO = ZMQ_RCVTIMEO,
    ZLINK_OPT_SNDBUF = ZMQ_SNDBUF,
    ZLINK_OPT_RCVBUF = ZMQ_RCVBUF,
    ZLINK_OPT_EVENTS = ZMQ_EVENTS,
    ZLINK_OPT_LAST_ENDPOINT = ZMQ_LAST_ENDPOINT,
    ZLINK_LAST_ENDPOINT = ZMQ_LAST_ENDPOINT,
    ZLINK_ROUTER_OPT_CONNECT_ROUTING_ID = ZMQ_CONNECT_ROUTING_ID
};
#define ZLINK_OPT_TCP_NODELAY ZMQ_TCP_NODELAY
#define ZLINK_OPT_TCP_NODELAY 25
#define ZLINK_OPT_TLS_CERT 95
#define ZLINK_OPT_TLS_KEY 96
#define ZLINK_OPT_TLS_CA 97
#define ZLINK_OPT_TLS_HOSTNAME 100
#define ZLINK_OPT_TLS_TRUST_SYSTEM 101
enum
{
    ZLINK_PUB_OPT_NODROP = 1
};
#define ZLINK_DONTWAIT ZMQ_DONTWAIT
inline int zlink_errno (void)
{
    return zmq_errno ();
}
inline const char *zlink_strerror (int errnum_)
{
    return zmq_strerror (errnum_);
}